#############################################################################
# CMakeLists.txt for the Classic Forum JSON parser library
#############################################################################

include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(json)

# eof
